...
        android:id="@+id/scrollview_choices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/sendRequest"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
...
