...
            android:textSize="24dp"
            android:layout_margin="4dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group">
            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbutton"
                />
...
