<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/time1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="9am-10am" />

            <CheckBox
                android:id="@+id/time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="10am-11am" />

            <CheckBox
                android:id="@+id/time3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="11am-12pm" />

            <CheckBox
                android:id="@+id/time4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="12pm-1pm" />

            <CheckBox
                android:id="@+id/time5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="1pm-2pm" />

            <CheckBox
                android:id="@+id/time6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="2pm-3pm" />

            <CheckBox
                android:id="@+id/time7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="3pm-4pm" />

            <CheckBox
                android:id="@+id/time8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="onClickCheckbox"
                android:text="4pm-5pm" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>