...
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="prompt_user_to_register">Register for account now.</string>
    <string name="title_activity_availability">AvailabilityActivity</string>
    <string-array name="class_array">
        <item>CSCI 102</item>
        <item>CSCI 103</item>
        <item>CSCI 104</item>
        <item>CSCI 109</item>
        <item>CSCI 170</item>
        <item>CSCI 201</item>
        <item>CSCI 270</item>
        <item>CSCI 310</item>
...
